@@ -1,5 +1,6 @@
 1.2
 - Better tokenizer, gives more indicative errors
+- Parser gives more indicative errors
 
 1.1
 - Incorrect relational operations now raise an exception instead of returning None
